--- a/ios/projetTest/Info.plist
+++ b/ios/projetTest/Info.plist
@@ -56,5 +56,13 @@
 			</dict>
 		</dict>
 	</dict>
+		<key>NSPhotoLiabraryUsageDescription</key>
+		<string>$(PRODUCT_NAME) voudrait accéder à votre galerie photo</string>
+		<key>NSCameraUsageDescription</key>
+		<string>$(PRODUCT_NAME) voudrait utiliser votre caméra</string>
+		<key>NSPhotoLiabraryAddUsageDescription</key>
+		<string>$(PRODUCT_NAME) voudrait enregistrer des photos dans votre galerie photo</string>
+		<key>NSMicrophoneUsageDescription</key>
+		<string>$(PRODUCT_NAME) voudrait accéder à votre micro pour les vidéos</string>
 </dict>
 </plist>
