--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-native": "0.58.4",
     "react-native-cli": "^2.0.1",
     "react-native-gesture-handler": "^1.0.15",
+    "react-native-image-picker": "^0.28.0",
     "react-navigation": "^3.1.5",
     "react-redux": "^6.0.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-persist": "^5.10.0"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
